welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:26: error: value update is not a member of plm.universe.Direction
		if (getDirection()=Direction.EAST) {
                    ^